# fccf

./: .clang-tidy  .gitignore  BUILDING.md  CMakeLists.txt  CMakePresets.json  HACKING.md  LICENSE  Makefile  README.md  sse2_strstr.cpp
.github/workflows/: ci.yml
cmake/: dev-mode.cmake  install-rules.cmake  install-script.cmake  variables.cmake
source/: lexer.cpp  lexer.hpp  main.cpp  searcher.cpp  searcher.hpp  sse2_strstr.cpp  thread_pool.hpp  token.hpp  utf8.cpp
src/: argparse.hpp  lexer.cpp  lexer.hpp  main.cpp  searcher.cpp  searcher.hpp  sse2_strstr.hpp  thread_pool.hpp  utf8.h
test/: CMakeLists.txt
